images/public/assets/scss/themes/skematik/_body.scss
html {
  height: 100%;
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}
body{
	/*margin-top: 100px !important;
	padding-bottom: 352px !important;*/
	background-color: #f9f9f9 !important;  
	position: relative;
	min-height: 100%;
}

a{
	cursor: pointer;
}

